refactored code to use List.of, fixed log messages